salesforce_ant_45.0/sample/codepkg/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Added_To_Cart__c</fullName>
        <label>Added To Cart</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bar_Code__c</fullName>
        <label>Bar Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <label>Brand Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Favorites__c</fullName>
        <label>Favorites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FirstCategory__c</fullName>
        <label>FirstCategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingredients__c</fullName>
        <label>Ingredients</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacture_Name__c</fullName>
        <label>Manufacture Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mongo_Id__c</fullName>
        <label>Mongo Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Image__c</fullName>
        <label>Product Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondCategory__c</fullName>
        <label>SecondCategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ThirdCategory__c</fullName>
        <label>ThirdCategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Views__c</fullName>
        <label>Views</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>